# project-data-analyst-agent

./: Dockerfile  README.md  app.ipynb  app.py  app1.ipynb  app1.py  app2.ipynb  app2.py  duckdb.ipynb  main.py  pyproject.toml  wikipedia.ipynb
.github/workflows/: deploy.yml  pylint.yml  run.yml  run_app1.yml  run_app2.yml
agents/: __init__.py
agents/plot/: __init__.py  main.py
agents/sessionstore/: __init__.py  main.py
agents/wikipedia/: __init__.py  main.py
