[project]
name = "da-agent"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "langgraph>=0.6.4,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pylint>=3.3.8,<4",
  "ipykernel>=6.30.1,<7",
  "ipython>=9.4.0,<10",
  "certifi>=2025.8.3,<2026",
  "requests>=2.32.4,<3",
]
