[project]
name = "da-agent"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "langgraph>=0.6.4,<1",
  "openai>=1.99.6,<2",
  "httpx>=0.28.1,<1",
  "urllib3>=2.5.0,<3",
  "beautifulsoup4>=4.13.4,<5",
  "nltk>=3.9.1,<4",
  "tqdm>=4.67.1,<5",
  "google-genai>=1.29.0,<2",
  "numpy>=2.3.2,<3",
  "pydantic>=2.11.7,<3",
  "wikipedia>=1.4.0,<2",
  "lxml>=6.0.0,<7",
  "uvicorn>=0.35.0,<1",
  "langchain>=0.3.27,<1",
  "langchain-openai>=0.3.29,<1",
  "pandas>=2.3.1,<3",
  "markdownify>=1.2.0,<2",
  "beautifulsoup4>=4.13.4,<5",
  "tiktoken>=0.11.0,<1",
  "pyarrow>=21.0.0,<22",
  "s3fs>=2025.7.0,<2026",
  "duckdb>=1.3.2,<2",
  "matplotlib>=3.10.5,<4",
  "python-multipart>=0.0.20,<1",
  "pillow>=11.3.0,<12",
  "networkx>=3.5,<4",
  "langchain-core>=0.3.74,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pylint>=3.3.8,<4",
  "ipykernel>=6.30.1,<7",
  "ipython>=9.4.0,<10",
  "certifi>=2025.8.3,<2026",
  "requests>=2.32.4,<3",
]
